<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ds_menu_settings">setting</string>
    <string name="app_name_krx">KeRuiXing</string>

    <!-- PDF -->
    <string name="pdf_file_no_exist">文件不存在</string>
    <string name="pdf_cancel">Cancel</string>
    <string name="pdf_search_backwards">Search backwards</string>
    <string name="pdf_search_forwards">Search forwards</string>
    <string name="pdf_search_document">Search document</string>
    <string name="pdf_outline_title">Table of Contents</string>
    <string name="pdf_text_not_found">Text not found</string>
    <string name="pdf_searching">Searching#8230;</string>
    <string name="pdf_no_further_occurences_found">No further occurrences found</string>
    <string name="pdf_progress_title">Generateing pdf#8230;</string>

    <!-- video -->
    <string name="video_file_no_exist">文件不存在或格式错误</string>
    <string name="video_volume_controler_title">音量调节</string>
    <string name="video_brightness_controler_title">亮度调节</string>
    <string name="video_return_btn">返回</string>
    <string name="video_back">返回</string>

    <!-- flash -->
    <string name="prompt_flash_Plugins">Please Install the Flash Plugin</string>
    <string name="name_flashplayer">Flash Player</string>
    <string name="setting_wifi">wifi设置</string>
    <string name="setting_3G">3G设置</string>
    <string name="setting_screen_offset">屏幕偏移</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_reboot">重启</string>
    <string name="setting_reset">重置</string>

    <string name="string_text_grade_little">小班</string>
    <string name="string_text_grade_mid">中班</string>
    <string name="string_text_grade_big">大班</string>
    <string name="string_text_grade_pre">学前班</string>

    <string name="string_text_term_semester0">上</string>
    <string name="string_text_term_semester1">下</string>

    <string name="string_text_language">语言</string>
    <string name="string_text_arithmetic">算术</string>
    <string name="string_text_jigsaw">拼图</string>
    <string name="string_text_thinking">思维</string>
    <string name="string_text_readable">识字</string>
    <string name="string_text_body">形体</string>

    <string name="string_text_health">健康</string>
    <string name="string_text_world">社会</string>
    <string name="string_text_scinece">科学</string>
    <string name="string_text_math">数学</string>
    <string name="string_text_read_write">阅读与书写</string>
    <string name="string_text_quality">习惯与学习品质</string>
    <string name="string_text_art_music">艺术(音乐)</string>
    <string name="string_text_art_paint">艺术(美术)</string>

    <string name="string_text_fairytale">冰波童话</string>
    <string name="string_text_happy_baby">快乐宝贝</string>
    <string name="string_text_other">其它</string>

    <string name="string_source_tip0">暂无搜索条件，请点选分类或输入关键字</string>
    <string name="string_source_tip1"><![CDATA[<b>未查询到相匹配的结果,请点选分类或<font color="#cc6600">重新</font>输入关键字</b>]]></string>
    <string name="string_source_search_hint">请输入关键字</string>
    <string name="string_source_category1_math">数学</string>
    <string name="string_source_category1_health">健康</string>
    <string name="string_source_category1_other">其他领域</string>
    <string name="string_source_search_result_tip">没有相匹配的文件</string>

    <string name="string_favour_label_tag">活动</string>
    <string name="string_favour_label_file">文件</string>

    <!-- 注册 -->
    <string name="string_register_network">正在联网，请稍等...</string>
    <string name="string_register_schoolname">请输入幼儿园名称</string>
    <string name="string_register_schoolname1">请输入联系方式</string>
    <string name="string_register_register">注册</string>
    <string name="string_register_tryten">试用十分钟</string>
    <string name="string_register_shutdown"> 关机</string>
    <string name="string_register_unnetwork">当前网络异常，请检查网络</string>
    <string name="string_register_prompt_limit_finished">限制使用结束，请检查网络设备</string>
    <string name="string_register_prompt_locked">本设备被锁定服务，请联系客服。\n客服热线：400-609-6688</string>
    <string name="string_register_prompt_limit_use">系统异常，限制使用中</string>
    <string name="string_register_prompt_delaynetwork">网络延时，请稍后重试...</string>
    <string name="string_register_input_notnull">您的输入不能为空!</string>
    <string name="string_register_success">注册成功</string>
    <string name="string_register_try">　　　　试用中</string>

    <string name="string_pdf_pre">上一页</string>
    <string name="string_pdf_next">下一页</string>
    <string name="string_pdf_max">放大</string>
    <string name="string_pdf_min">缩小</string>

    <item type="id" name="tag_first"></item>
    <item type="id" name="tag_second"></item>
    <item type="id" name="tag_third"></item>
    <item type="id" name="tag_fourth"></item>
</resources>