<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/case_bg" >

    <!--  状态栏  -->
    <include layout="@layout/include_status" />

    <!-- 大小班级 -->
    <RadioGroup
        android:id="@+id/rg_act_case_grade"
        android:layout_width="@dimen/act_case_grade_radio_group_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/act_case_grade_radio_group_marginLeft"
        android:layout_marginTop="@dimen/act_case_grade_radio_group_marginTop"
        android:orientation="horizontal"
        >
        <com.goodow.drive.android.view.FontRadioButton
            android:id="@+id/rb_act_case_little"
            style="@style/harmony_grade"
            android:text="@string/string_text_grade_little"
            android:checked="true"
            />
        <com.goodow.drive.android.view.FontRadioButton
            android:id="@+id/rb_act_case_middle"
            style="@style/harmony_grade"
            android:text="@string/string_text_grade_mid"
            />
        <com.goodow.drive.android.view.FontRadioButton
            android:id="@+id/rb_act_case_big"
            style="@style/harmony_grade"
            android:text="@string/string_text_grade_big" />
        <com.goodow.drive.android.view.FontRadioButton
            android:id="@+id/rb_act_case_pre"
            android:layout_width="90dp"
            style="@style/harmony_grade"
            android:background="@drawable/harm_selector_grade_long"
            android:text="@string/string_text_grade_pre" />
    </RadioGroup>

    <!--上下学期 -->
    <RadioGroup
        android:id="@+id/rg_act_case_term"
        android:layout_width="@dimen/act_case_term_radio_group_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/act_case_term_radio_group_marginLeft"
        android:layout_marginTop="@dimen/act_case_term_radio_group_marginTop"
        android:orientation="horizontal"
        android:layout_toRightOf="@+id/rg_act_case_grade"
        >
        <com.goodow.drive.android.view.FontRadioButton
            android:id="@+id/rb_act_case_top"
            style="@style/harmony_grade"
            android:checked="true"
            android:text="@string/string_text_term_semester0"
             />
        <com.goodow.drive.android.view.FontRadioButton
            android:id="@+id/rb_act_case_bottom"
            style="@style/harmony_grade"
            android:text="@string/string_text_term_semester1" />
    </RadioGroup>

    <!-- 活动分类 -->
    <RadioGroup
        android:id="@+id/rg_act_case_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/act_case_topic_radio_group_marginTop"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/act_case_topic_radio_group_marginRight"
        >
        <com.goodow.drive.android.view.FontRadioButton
          android:id="@+id/rb_act_case_class_health"
          style="@style/harmony_class"
          android:text="@string/string_text_health"
          android:checked="true"
            />
        <com.goodow.drive.android.view.FontRadioButton
          android:id="@+id/rb_act_case_class_language"
          style="@style/harmony_class"
          android:text="@string/string_text_language"
            />
        <com.goodow.drive.android.view.FontRadioButton
          android:id="@+id/rb_act_case_class_world"
          style="@style/harmony_class"
          android:text="@string/string_text_world"
            />
        <com.goodow.drive.android.view.FontRadioButton
          android:id="@+id/rb_act_case_class_scinece"
          style="@style/harmony_class"
          android:text="@string/string_text_scinece"
            />
        <com.goodow.drive.android.view.FontRadioButton
          android:id="@+id/rb_act_case_class_math"
          style="@style/harmony_class"
          android:text="@string/string_text_math"
            />
        <com.goodow.drive.android.view.FontRadioButton
          android:id="@+id/rb_act_case_class_music"
          style="@style/harmony_class"
          android:text="@string/string_text_art_music"
          android:background="@drawable/harm_selector_class_len"
            />
        <com.goodow.drive.android.view.FontRadioButton
          android:id="@+id/rb_act_case_class_art"
          style="@style/harmony_class"
          android:background="@drawable/harm_selector_class_len"
          android:text="@string/string_text_art_paint"
            />
    </RadioGroup>

    <!--  后退  收藏  锁屏  -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/act_case_fun_bar_marginLeft"
        android:layout_marginTop="@dimen/act_case_fun_bar_marginTop"
        >
        <include 
            android:id="@+id/iv_act_case_back"
            layout="@layout/include_back"/>
        <ImageView
          android:id="@+id/iv_act_case_coll"
          style="@style/index_sys_fun"
          android:src="@drawable/common_selector_coll"
          android:layout_below="@+id/iv_act_case_back"
          android:clickable="true"
          />
        <ImageView
          android:id="@+id/iv_act_case_loc"
          style="@style/index_sys_fun"
          android:src="@drawable/common_selector_loc"
          android:layout_below="@+id/iv_act_case_coll"
          android:clickable="true"
          />
    </RelativeLayout>

    <!-- 查询结果 -->
    <RelativeLayout
        android:id="@+id/rl_act_case_result"
        android:layout_width="@dimen/act_case_result_root_width"
        android:layout_height="@dimen/act_case_result_root_height"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/act_case_result_root_marginRight"
        android:paddingTop="@dimen/act_case_result_root_paddingTop"
        >
        <!-- 查询结果 上一页-->
        <ImageView
            android:id="@+id/rl_act_case_result_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/common_result_pre"
            android:clickable="true"
            android:visibility="invisible"
            />

        <!-- 查询结果 -->
        <android.support.v4.view.ViewPager
          android:id="@+id/vp_act_case_result"
          android:layout_width="@dimen/act_case_result_width"
          android:layout_height="fill_parent"
          android:layout_centerHorizontal="true"
          />

        <!-- 查询结果 下一页-->
        <ImageView
            android:id="@+id/rl_act_case_result_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/common_result_next"
            android:clickable="true"
            android:visibility="invisible"
            />
        <!-- 查询结果 页码数量-->
        <LinearLayout
            android:id="@+id/ll_act_case_result_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            >
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
