<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
    android:orientation="vertical"
    android:weightSum="11" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >

        <!-- 后退键 -->

        <ImageView
            android:id="@+id/iv_common_back"
            android:layout_marginTop="@dimen/common_back_margin"
            android:layout_marginLeft="@dimen/common_back_margin"
            android:layout_width="@dimen/common_back_width"
            android:layout_height="@dimen/common_back_height"
            android:src="@drawable/common_selector_back" />

        <!-- 状态栏 -->

        <include layout="@layout/include_status" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5" >
        
        <ScrollView 
            android:scrollbars="none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <!-- 一堆按钮 -->

            <Button
                android:id="@+id/bt_setting_wifi"
                style="@style/setting_bt"
                android:layout_marginTop="0dp"
                android:text="@string/setting_wifi" />

            <Button
                android:id="@+id/bt_setting_screen_offset"
                style="@style/setting_bt"
                android:text="@string/setting_screen_offset" />

            <Button
                android:id="@+id/bt_setting_about"
                style="@style/setting_bt"
                android:text="@string/setting_about" />

            <Button
                android:id="@+id/bt_setting_reboot"
                style="@style/setting_bt"
                android:text="@string/setting_reboot" />

        </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>