<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
    android:orientation="vertical"
    android:weightSum="11" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >

        <!-- 后退 -->

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/setting_back_marginLeft"
            android:layout_marginTop="@dimen/setting_back_marginTop" >

            <include
                android:id="@+id/iv_common_back"
                layout="@layout/include_back" />
        </RelativeLayout>

        <!-- 状态栏 -->

        <com.goodow.drive.android.view.StatusView
	style="@style/status" 
    />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5" >

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <!-- 一堆按钮 -->

                <Button
                    android:id="@+id/bt_setting_wifi"
                    style="@style/setting_bt"
                    android:layout_marginTop="0dp"
                    android:text="@string/setting_wifi" />

                <Button
                    android:id="@+id/bt_setting_screen_offset"
                    style="@style/setting_bt"
                    android:text="@string/setting_screen_offset" />

                <Button
                    android:id="@+id/bt_setting_about"
                    style="@style/setting_bt"
                    android:text="@string/setting_about" />

                <Button
                    android:id="@+id/bt_setting_reboot"
                    style="@style/setting_bt"
                    android:text="@string/setting_reboot" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>