<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/register_login_border_width"
    android:layout_height="@dimen/register_login_border_height"
    android:background="@drawable/register_border"
    android:layout_marginBottom="45dip"
    android:layout_marginRight="20dip"
    android:gravity="center"
    android:orientation="vertical"  >
    <com.goodow.drive.android.view.FontTextView
        android:id="@+id/tv_register_prompt"
        android:paddingTop="20dip"
        android:layout_marginTop="20dip"
        android:ems="10"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:text="@string/string_register_prompt_limit_finished"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >

         <com.goodow.drive.android.view.FontTextView
                android:id="@+id/tv_register_reboot"
                android:background="@drawable/register_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:textColor="#063105"
                android:textSize="28sp"
                android:gravity="center"
                android:text="@string/setting_reboot"
             />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            >
             <com.goodow.drive.android.view.FontTextView
                android:id="@+id/tv_register_shutdown"
                android:textColor="#4d1b0d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dip"
                android:background="@drawable/register_close"
                android:drawableLeft="@drawable/register_shutdown"
                android:paddingLeft="25dp"
                android:gravity="center_vertical"
                android:textSize="28sp"
                android:text="@string/string_register_shutdown" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>